# xpscenery

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  vcpkg.json
.github/workflows/: build-windows.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/xpscenery/: xpscenery.h
core/src/: version.cpp
core/src/capi/: xps_capi.cpp
docs/: ARCHITECTURE.md  LICENSING.md  README.md  versions.md
docs/ADR/: 0001-use-cmake-and-vcpkg.md  0002-use-qt6-for-ui.md  ADR-0003-core-is-static-in-v0.md  ADR-0004-modernization-manifesto.md  ADR-0005-geodesy-vincenty.md  ADR-0006-dsf-writer-identity-first.md  ADR-0007-dsf-decomposing-writer.md  ADR-0008-ui-architecture-qt6-mvvm.md
modules/app_cli/: CMakeLists.txt
modules/app_cli/include/xpscenery/app_cli/: cli_app.hpp
modules/app_cli/src/: cli_app.cpp  cmd_bbox.cpp  cmd_distance.cpp  cmd_dsf_inspect.cpp  cmd_dsf_rewrite.cpp  cmd_dsf_stats.cpp  cmd_inspect.cpp  cmd_inspect_config.cpp  cmd_obj_stats.cpp  cmd_raster_info.cpp  cmd_tile.cpp  cmd_triangulate.cpp  cmd_validate.cpp  cmd_version.cpp  commands.hpp
modules/core_types/: CMakeLists.txt
modules/core_types/include/xpscenery/core_types/: bounding_box.hpp  lat_lon.hpp  tile_coord.hpp  version_info.hpp
modules/core_types/src/: bounding_box.cpp  lat_lon.cpp  tile_coord.cpp  version_info.cpp
modules/geodesy/: CMakeLists.txt
modules/geodesy/include/xpscenery/geodesy/: vincenty.hpp
modules/geodesy/src/: vincenty.cpp
modules/io_config/: CMakeLists.txt
modules/io_config/include/xpscenery/io_config/: tile_config.hpp
modules/io_config/src/: tile_config.cpp
modules/io_dsf/: CMakeLists.txt
modules/io_dsf/include/xpscenery/io_dsf/: dsf_atoms.hpp  dsf_cmds.hpp  dsf_header.hpp  dsf_md5.hpp  dsf_pool.hpp  dsf_raster.hpp  dsf_strings.hpp  dsf_writer.hpp
modules/io_dsf/src/: dsf_atoms.cpp  dsf_cmds.cpp  dsf_header.cpp  dsf_md5.cpp  dsf_pool.cpp  dsf_raster.cpp  dsf_strings.cpp  dsf_writer.cpp
modules/io_filesystem/: CMakeLists.txt
modules/io_filesystem/include/xpscenery/io_filesystem/: file_io.hpp  paths.hpp
modules/io_filesystem/src/: file_io.cpp  paths.cpp
modules/io_logging/: CMakeLists.txt
modules/io_logging/include/xpscenery/io_logging/: logger.hpp
modules/io_logging/src/: logger.cpp
modules/io_obj/: CMakeLists.txt
modules/io_obj/include/xpscenery/io_obj/: obj_info.hpp
modules/io_obj/src/: obj_info.cpp
modules/io_osm/: CMakeLists.txt
modules/io_osm/include/xpscenery/io_osm/: osm_detect.hpp  pbf_header.hpp
modules/io_osm/src/: osm_detect.cpp  pbf_header.cpp
modules/io_raster/: CMakeLists.txt
modules/io_raster/include/xpscenery/io_raster/: geotiff_ifd.hpp  tiff_detect.hpp  tiff_preview.hpp
modules/io_raster/src/: geotiff_ifd.cpp  tiff_detect.cpp  tiff_preview.cpp
modules/io_vector/: CMakeLists.txt
modules/io_vector/include/xpscenery/io_vector/: shp_header.hpp
modules/io_vector/src/: shp_header.cpp
modules/mesh_core/: CMakeLists.txt
modules/mesh_core/include/xpscenery/mesh_core/: delaunay.hpp  mesh_io.hpp  point.hpp  predicates.hpp  triangle_mesh.hpp
modules/mesh_core/src/: delaunay.cpp  mesh_io.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/xpscenery/utils/: version.hpp
modules/utils/src/: placeholder.cpp
tests/: CMakeLists.txt
tests/unit/: test_smoke.cpp  test_version.cpp
tests/unit/core_types/: test_bounding_box.cpp  test_lat_lon.cpp  test_tile_coord.cpp
tests/unit/geodesy/: test_vincenty.cpp
tests/unit/io_config/: test_tile_config.cpp
tests/unit/io_dsf/: test_dsf.cpp  test_dsf_cmds.cpp  test_dsf_decomposed.cpp  test_dsf_md5.cpp  test_dsf_pool.cpp  test_dsf_raster.cpp  test_dsf_strings.cpp  test_dsf_writer.cpp
tests/unit/io_filesystem/: test_file_io.cpp  test_paths.cpp
tests/unit/io_obj/: test_obj_info.cpp
tests/unit/io_osm/: test_osm_detect.cpp
tests/unit/io_raster/: test_geotiff_ifd.cpp  test_tiff_detect.cpp
tests/unit/mesh_core/: test_delaunay.cpp
tests/unit/utils/: test_utils_scaffold.cpp
ui/: CMakeLists.txt
ui/qml/: Main.qml  MapPlaceholder.qml  StatusBar.qml
ui/qml/style/: theme.js
ui/src/: dsf_inspector_view.cpp  dsf_inspector_view.hpp  main.cpp  main_window.cpp  main_window.hpp  mesh_view_view.cpp  mesh_view_view.hpp  obj_viewer_view.cpp  obj_viewer_view.hpp  pbf_viewer_view.cpp  pbf_viewer_view.hpp  project_view.cpp  project_view.hpp  raster_viewer_view.cpp  raster_viewer_view.hpp  shp_viewer_view.cpp  shp_viewer_view.hpp  tile_grid_view.cpp  tile_grid_view.hpp
